--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.9",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.0",
     "@testing-library/user-event": "^12.2.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "axios": "^0.21.0",
+    "dotenv": "^8.2.0",
+    "graphql": "^15.4.0",
+    "interactjs": "^1.10.0",
+    "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
+    "randomcolor": "^0.6.2",
+    "react": "^16.1.4",
+    "react-calendar-timeline": "^0.27.0",
+    "react-dom": "^16.1.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "subscriptions-transport-ws": "^0.9.18",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
